compiler-core/src/snapshots/gleam_core__requirement__tests__read_dependency_with_git_and_invalid_field.snap
---
source: compiler-core/src/requirement.rs
expression: error.to_string()
---
TOML parse error at line 1, column 23
  |
1 | github = { git = "a", refs = "b" }
  |                       ^^^^
unknown field `refs`, expected one of `version`, `path`, `git`, `ref`
